Added logout on token timeout
